--- a/.github/workflows/release-build-publish.yml
+++ b/.github/workflows/release-build-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Publish
+name: Build
 
 on:
   release:
@@ -12,7 +12,7 @@ on:
 
 jobs:
   java_build:
-    name: Build and Publish Jar
+    name: Build
 
     runs-on: ubuntu-latest
 
@@ -38,21 +38,21 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build --refresh-dependencies -Pversion=$VERSION
 
-      - name: Install gpg secret key
-        run: |
-          export GPG_TTY=$(tty)
-          echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode | gpg --batch --import
-          gpg --list-secret-keys --keyid-format LONG
-          echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode > $GITHUB_WORKSPACE/release.gpg
-        if: github.event_name == 'release'
-
-      - name: Publish to Maven Central
-        run: |
-          ./gradlew publish \
-            -Pversion=$VERSION \
-            -Psigning.keyId=B7D30ABE -Psigning.password="${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}" -Psigning.secretKeyRingFile=$GITHUB_WORKSPACE/release.gpg \
-            --info
-        env:
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-        if: github.event_name == 'release'
+#      - name: Install gpg secret key
+#        run: |
+#          export GPG_TTY=$(tty)
+#          echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode | gpg --batch --import
+#          gpg --list-secret-keys --keyid-format LONG
+#          echo -n "${{ secrets.OSSRH_GPG_SECRET_KEY }}" | base64 --decode > $GITHUB_WORKSPACE/release.gpg
+#        if: github.event_name == 'release'
+#
+#      - name: Publish to Maven Central
+#        run: |
+#          ./gradlew publish \
+#            -Pversion=$VERSION \
+#            -Psigning.keyId=B7D30ABE -Psigning.password="${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}" -Psigning.secretKeyRingFile=$GITHUB_WORKSPACE/release.gpg \
+#            --info
+#        env:
+#          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+#          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+#        if: github.event_name == 'release'
